--- a/assets/scss/header/toolbar-search-header.scss
+++ b/assets/scss/header/toolbar-search-header.scss
@@ -44,6 +44,7 @@
   border-left: 1px solid #c9c9c9;
   color: #000000;
   background-color: #ffffff;
+  text-transform: uppercase;
 
   &:hover
   {
@@ -61,6 +62,6 @@
   .btn-icon
   {
     position: relative;
-    top: 7px;
+    top: 3px;
   }
 }
