components/home/business

--- a/assets/scss/home/cities/xs.scss
+++ b/assets/scss/home/cities/xs.scss
@@ -9,7 +9,7 @@
     .cities-section
     {
         column-count: 2;
-        coulumn-width: 50%;
+        column-width: 50%;
     }
     .city-name
     {
