--- a/assets/scss/profiles-search/container-results/lg.scss
+++ b/assets/scss/profiles-search/container-results/lg.scss
@@ -1,3 +1,14 @@
+.container-results
+{
+  width: calc(100% - 300px);
+  float: right;
+}
+.results-section
+{
+  min-height: calc(100vh - 64px);
+  margin-left: 15px;
+  margin-right: 15px;
+}
 .title-section
 {
     font-size: 16px;
