--- a/assets/scss/profiles-search/container-results/results-list/lg.scss
+++ b/assets/scss/profiles-search/container-results/results-list/lg.scss
@@ -35,6 +35,15 @@
     background-size: cover;
     border-radius: 4px;
 }
+.card-profile-image
+{
+    width: 100%;
+    height: 440px;
+
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
 .profile-image-not-available
 {
     width: 100%;
@@ -59,4 +68,32 @@
         letter-spacing: 2px;
         cursor: default;
     }
+}
+.dialog-profile-image-not-available
+{
+    width: 100%;
+    height: 340px;
+
+    text-align: center;
+
+    background: linear-gradient(to top left, #ECEFF1 calc(49.9% - 1px), #c1c1c1, #ECEFF1 calc(49.9% + 1px) );
+
+    .no-picture-text
+    {
+        height: 40px;
+        line-height: 40px;
+        position: absolute;
+        padding-right: 20px;
+        padding-left: 20px;
+        margin-top: 150px;
+        margin-left: calc(84% / 2);
+        background-color: #ECEFF1;
+        font-weight: 700;
+        letter-spacing: 2px;
+        cursor: default;
+    }
+}
+.dialog-close-button {
+    font-size: 12px;
+    letter-spacing: 2px;
 }
