updated logo in components/home

--- a/assets/scss/home/business/lg.scss
+++ b/assets/scss/home/business/lg.scss
@@ -30,6 +30,10 @@
         padding-left: 24px;
     }
 }
+.logo-section-component
+{
+  text-align: right;
+}
 .big-font-title
 {
     font-size: 40px;
