--- a/assets/scss/home/business/xs.scss
+++ b/assets/scss/home/business/xs.scss
@@ -17,6 +17,10 @@
             font-size: 20px;
         }
     }
+    .logo-section-component
+    {
+      text-align: center;
+    }
     .logo-component
     {
         float: right;
