updated home page

--- a/assets/scss/home/categories/xs.scss
+++ b/assets/scss/home/categories/xs.scss
@@ -5,6 +5,7 @@
         font-size: 30px;
         padding-top: 60px;
         padding-bottom: 60px;
+        text-align: center;
     }
     .category-tiles
     {
