--- a/assets/scss/home/business/xs.scss
+++ b/assets/scss/home/business/xs.scss
@@ -5,6 +5,7 @@
         font-size: 30px;
         padding-top: 60px;
         padding-bottom: 60px;
+        text-align: center;
     }
     .logo-section
     {
@@ -41,7 +42,7 @@
     }
     .big-font-title
     {
-        font-size: 30px;
+        font-size: 26px;
         padding-left: 10px;
         padding-right: 10px;
 
