updated components/header/header.vue and toolbar-search-header.vue, components/profiles-search/search-dialog-xs.vue

--- a/assets/scss/profiles-search/search-dialog-xs.scss
+++ b/assets/scss/profiles-search/search-dialog-xs.scss
@@ -8,7 +8,7 @@
 
     .close-icon
     {
-        color: #000000;
+        color: #2b2b2b;
         font-size: 30px;
     }
 
@@ -45,7 +45,7 @@
 {
     height: 64px;
     line-height: 64px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #000000;
 }
 .submit-form-button
 {
