--- a/assets/scss/home/tags/lg.scss
+++ b/assets/scss/home/tags/lg.scss
@@ -18,6 +18,7 @@
     border-bottom: 2px solid #ededed;
     padding-bottom: 16px;
     text-align:center;
+    text-transform: uppercase;
 }
 .tags-section
 {
