updated pages/_lang/photos/index.vue, components/home/gallery.vue, locales/

--- a/assets/scss/home/gallery/lg.scss
+++ b/assets/scss/home/gallery/lg.scss
@@ -9,6 +9,11 @@
 
     color: #000000;
 }
+.gallery-container
+{
+  background-color: #ffffff;
+  margin-top: -6px;
+}
 .button-link
 {
     text-decoration: none;
