--- a/assets/scss/profiles-search/container-results/lg.scss
+++ b/assets/scss/profiles-search/container-results/lg.scss
@@ -18,3 +18,15 @@
     padding-top: 14px;
     padding-bottom: 14px;
 }
+.paging-button
+{
+  margin-top: 40px;
+  margin-bottom: 60px;
+  font-size: 12px;
+  letter-spacing: 2px;
+
+  .icon
+  {
+    margin-left: 10px;
+  }
+}
