--- a/assets/scss/profiles-search/sidebar-menu.scss
+++ b/assets/scss/profiles-search/sidebar-menu.scss
@@ -32,7 +32,7 @@ li
     &::-webkit-scrollbar-thumb {
         height: 10px;
         border-radius: 0px;
-        background-color: #c8c8c8;
+        background-color: #4e4d4d;
     }
 }
 .ul-section
