--- a/assets/scss/footer/lg.scss
+++ b/assets/scss/footer/lg.scss
@@ -1,77 +1,91 @@
 .footer-container
 {
-    padding-top: 80px;
-    border-top: 2px solid #f4f4f4;
-    background-color: #ffffff;
+  padding-top: 80px;
+
+  border-top: 2px solid #f4f4f4;
+  background-color: #fff;
 }
 .footer-section
 {
-    padding-bottom: 40px;
-    border-bottom: 2px solid #252bfc;
+  padding-bottom: 40px;
+
+  border-bottom: 2px solid #252bfc;
 }
 .icons-section
 {
-    padding-top: 20px;
+  padding-top: 20px;
 
-    .footer-icon
-    {
-        display: inline;
-        color: #c4c4c4;
-    }
+  .footer-icon
+  {
+    display: inline;
+
+    color: #c4c4c4;
+  }
 }
 .description
 {
-    padding-top: 20px;
-    padding-right: 28px;
-    padding-bottom: 28px;
-    letter-spacing: 1px;
-    color: #4e4e4e;
+  padding-top: 20px;
+  padding-right: 28px;
+  padding-bottom: 28px;
+  letter-spacing: 1px;
+  color: #4e4e4e;
 }
 .link-section
 {
-    font-size: 12px;
-    padding-bottom: 16px;
-    cursor: default;
-    letter-spacing: 2px;
-    text-transform: uppercase;
+  font-size: 12px;
+
+  padding-bottom: 16px;
+
+  cursor: default;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+
+  color: #4e4e4e;
+
+  a
+  {
+    text-decoration: none;
+
     color: #4e4e4e;
+  }
 
-    a
-    {
-        text-decoration: none;
-        color: #4e4e4e;
-    }
+  a:hover
+  {
+    font-size: 12px;
+    font-weight: 700;
 
-    a:hover
-    {
-        font-size: 12px;
-        font-weight: 700;
-        color: #252bfc;
-    }
+    color: #252bfc;
+  }
 
-    .link-icon
-    {
-        font-size: 18px;
-        top: 1px;
-        margin-right: 12px;
-        color: #000000!important;
-    }
+  .link-icon
+  {
+    font-size: 18px;
+
+    top: 1px;
+
+    margin-right: 12px;
+
+    color: #000!important;
+  }
 }
 .copyright-section
 {
-    height: 120px;
-    line-height: 120px;
+  height: 120px;
+  line-height: 120px;
 
-    display: inline;
+  display: inline;
 }
 .email-link
 {
     font-size: 12px;
-    letter-spacing: 2px;
-    float: left;
-    text-decoration: none;
-    color: #4e4e4e;
     font-weight: 700;
+
+    float: left;
+
+    text-decoration: none;
+    letter-spacing: 2px;
+
+    color: #4e4e4e;
 }
 .copyright
 {
@@ -79,9 +93,10 @@
     font-weight: 700;
 
     float: right;
+
+    cursor: default;
     letter-spacing: 2px;
     text-transform: uppercase;
-    cursor: default;
 
     color: #4e4e4e;
 }
