--- a/assets/scss/profiles-search/container-results/xs.scss
+++ b/assets/scss/profiles-search/container-results/xs.scss
@@ -1,17 +1,18 @@
 @media only screen and (max-width: 600px)
 {
-    .container-results
-    {
-        width: 100%;
-        float: none;
-    }
-    .results-section
-    {
-        margin-left: 0px;
-        margin-right: 0px;
-    }
-    .title-section
-    {
-        margin-left: 10px;
-    }
+  .container-results
+  {
+    float: none;
+
+    width: 100%;
+  }
+  .results-section
+  {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .title-section
+  {
+    margin-left: 10px;
+  }
 }
