--- a/assets/scss/header/toolbar-search-header.scss
+++ b/assets/scss/header/toolbar-search-header.scss
@@ -1,8 +1,10 @@
 .toolbar-search-header
 {
   position: fixed;
+
   height: 64px;
-  box-shadow: 0px 1px #f2f2f2 !important;
+
+  box-shadow: 0 1px #f2f2f2 !important;
 }
 .search-form
 {
@@ -11,52 +13,61 @@
 }
 .combobox-input
 {
-  height: 64px;
   line-height: 64px;
+
+  height: 64px;
 }
 .query-input
 {
-  border-left: 1px solid #c9c9c9;
-  height: 64px;
   line-height: 64px;
+
+  height: 64px;
+
+  border-left: 1px solid #c9c9c9;
 
   .v-input__slot
   {
-      border-radius: 0px;
-      box-shadow: none !important;
-      margin-bottom: 0px;
-      height: 64px;
+    height: 64px;
+    margin-bottom: 0;
 
-      .primary--text
-      {
-          color: #252bfc !important;
-      }
+    border-radius: 0;
+    box-shadow: none !important;
+
+    .primary--text
+    {
+      color: #252bfc !important;
+    }
   }
 }
 .submit-search-form-btn
 {
-  height: 64px;
-  line-height: 64px;
-  width: 100%;
-  letter-spacing: 2px;
   font-size: 14px;
-  outline: none;
+  line-height: 64px;
+
+  width: 100%;
+  height: 64px;
+  
+  letter-spacing: 2px;
+  text-transform: uppercase;
+
+  color: #000;
   border-right: 1px solid #c9c9c9;
   border-left: 1px solid #c9c9c9;
-  color: #000000;
-  background-color: #ffffff;
-  text-transform: uppercase;
+  outline: none;
+  background-color: #fff;
 
   &:hover
   {
-    color: #ffffff;
-    background-color: #252bfc;
     transition: background-color 200ms linear;
+
+    color: #fff;
+    background-color: #252bfc;
 
     .btn-icon
     {
-      color: #ffffff;
       transition: background-color 200ms linear;
+
+      color: #fff;
     }
   }
 
