--- a/assets/scss/photos/id/lg.scss
+++ b/assets/scss/photos/id/lg.scss
@@ -1,52 +1,61 @@
 .container-photo
 {
-    background-color: #ffffff;
-    padding-bottom: 100px;
+  padding-bottom: 100px;
+
+  background-color: #fff;
 }
 .details-section
 {
-    background-color: #ffffff;
-    box-shadow: none;
+  background-color: #fff;
+  box-shadow: none;
 }
 .title-text
 {
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 700;
+  font-size: 18px;
+  font-weight: 700;
+
+  letter-spacing: 2px;
 }
 .card-text
 {
-    color: #4f4f4f;
-    letter-spacing: 2px;
-    cursor: default;
-    height: auto;
-    clear: both;
+  clear: both;
 
-    .card-icon
-    {
-        position: relative;
-        top: 7px;
-        margin-right: 14px;
-        color: #252bfc;
-    }
+  height: auto;
+
+  cursor: default;
+  letter-spacing: 2px;
+
+  color: #4f4f4f;
+
+  .card-icon
+  {
+    position: relative;
+    top: 7px;
+
+    margin-right: 14px;
+
+    color: #252bfc;
+  }
 }
 .details-tag
 {
-    height: 48px;
-    letter-spacing: 1px;
-    padding: 4px;
-    margin: 0px;
-    margin-top: 8px;
-    margin-right: 8px;
-    background-color: #ffffff;
+  height: 48px;
+  margin: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+  padding: 4px;
 
-    &:hover
-    {
-        border-color: #ffaa06;
-        color: #000000;
-    }
+  letter-spacing: 1px;
+
+  background-color: #fff;
+
+  &:hover
+  {
+    color: #000;
+    border-color: #ffaa06;
+  }
 }
 .photo-section
 {
-    width: 100%;
+  width: 100%;
 }
