--- a/assets/scss/photos/lg.scss
+++ b/assets/scss/photos/lg.scss
@@ -1,90 +1,101 @@
 .fade-enter-active, .fade-leave-active
 {
-    transition: opacity .3s;
+  transition: opacity .3s;
 }
 .fade-enter, .fade-leave-to
 {
-    opacity: 0;
+  opacity: 0;
 }
-
 .container-gallery
 {
-    min-height: calc(100vh - 64px);
-    height: auto;
-    background-color: #ffffff;
-    padding-bottom: 100px;
+  height: auto;
+  min-height: calc(100vh - 64px);
+  padding-bottom: 100px;
+
+  background-color: #fff;
 }
 .title-section
 {
-    font-size: 44px;
+  font-size: 44px;
 
-    padding-top: 100px;
-    padding-bottom: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 
-    text-align: center;
-    letter-spacing: 2px;
+  text-align: center;
+  letter-spacing: 2px;
 
-    color: #111111;
+  color: #111;
 }
 .image-section
 {
-    max-width: 480px;
+  max-width: 480px;
 }
 .paging-button
 {
-    font-weight: bold;
+  font-weight: bold;
 
-    margin-top: 60px;
-    background-color: #000000 !important;
-    color: #ffffff;
-    letter-spacing: 3px;
+  margin-top: 60px;
+
+  letter-spacing: 3px;
+
+  color: #fff;
+  background-color: #000 !important;
 }
 .desktop-full-screen-photo
 {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 1);
-    z-index: 999;
-    top: 0%;
-    right: 0%;
-    left: 0%;
-    bottom: 0%;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
-    html, body
-    {
-        overflow: hidden !important;
-    }
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(255, 255, 255, 1);
+
+  html, body
+  {
+    overflow: hidden !important;
+  }
 }
 .full-size-photo
 {
-    position: absolute;
-    top: 0%;
-    right: 0%;
-    left: 0%;
-    bottom: 0%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
-    width: 80%;
-    max-width: 1400px;
-    height: auto;
-    display: block;
-    margin: auto;
+  display: block;
+
+  width: 80%;
+  max-width: 1400px;
+  height: auto;
+  margin: auto;
 }
 .info-icon
 {
+  font-size: 30px;
+
   position: absolute;
-  left: 0px;
+  left: 0;
+
   margin-top: 16px;
   margin-left: 16px;
-  font-size: 30px;
+
   color: #969696;
 }
 .card-button
 {
-    position: absolute;
-    right: 0px;
-    margin-top: 16px;
-    margin-right: 16px;
-    font-size: 30px;
-    color: #969696;
+  font-size: 30px;
+
+  position: absolute;
+  right: 0;
+
+  margin-top: 16px;
+  margin-right: 16px;
+
+  color: #969696;
 }
