--- a/assets/scss/profiles-search/container-results/results-list/lg.scss
+++ b/assets/scss/profiles-search/container-results/results-list/lg.scss
@@ -1,99 +1,116 @@
 .container-profile
 {
-    background-color: #ffffff;
-    margin-bottom: 12px;
+  margin-bottom: 12px;
+
+  background-color: #fff;
 }
 .profile-name
 {
   font-size: 22px;
   font-weight: 500;
-  letter-spacing: 1px;
+
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
+
   cursor: default;
+  letter-spacing: 1px;
 }
 .profile-subtext
 {
-    color: #808080;
-    letter-spacing: 1px;
-    padding-left: 10px;
-    padding-right: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+
+  letter-spacing: 1px;
+
+  color: #808080;
 }
 .profile-image-section
 {
-    padding-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-right: 10px;
 }
 .profile-image
 {
-    width: 100%;
-    height: 200px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 4px;
+  width: 100%;
+  height: 200px;
+
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 .card-profile-image
 {
-    width: 100%;
-    height: 440px;
+  width: 100%;
+  height: 440px;
 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 .profile-image-not-available
 {
-    width: 100%;
-    height: 200px;
+  width: 100%;
+  height: 200px;
 
-    border-radius: 4px;
+  border-radius: 4px;
 
-    text-align: center;
+  text-align: center;
 
-    background: linear-gradient(to top left, #ECEFF1 calc(49.9% - 1px), #c1c1c1, #ECEFF1 calc(49.9% + 1px) );
+  background: linear-gradient(to top left, #ECEFF1 calc(49.9% - 1px), #c1c1c1, #ECEFF1 calc(49.9% + 1px) );
 
-    .no-picture-text
-    {
-        height: 40px;
-        line-height: 40px;
-        position: relative;
-        top: 90px;
-        padding-right: 20px;
-        padding-left: 20px;
-        background-color: #ECEFF1;
-        font-weight: 700;
-        letter-spacing: 2px;
-        cursor: default;
-    }
+  .no-picture-text
+  {
+    font-weight: 700;
+    line-height: 40px;
+
+    position: relative;
+    top: 90px;
+
+    height: 40px;
+    padding-right: 20px;
+    padding-left: 20px;
+
+    cursor: default;
+    letter-spacing: 2px;
+
+    background-color: #eceff1;
+  }
 }
 .dialog-profile-image-not-available
 {
-    width: 100%;
-    height: 340px;
+  width: 100%;
+  height: 340px;
 
-    text-align: center;
+  text-align: center;
 
-    background: linear-gradient(to top left, #ECEFF1 calc(49.9% - 1px), #c1c1c1, #ECEFF1 calc(49.9% + 1px) );
+  background: linear-gradient(to top left, #ECEFF1 calc(49.9% - 1px), #c1c1c1, #ECEFF1 calc(49.9% + 1px) );
 
-    .no-picture-text
-    {
-        height: 40px;
-        line-height: 40px;
-        position: absolute;
-        padding-right: 20px;
-        padding-left: 20px;
-        margin-top: 150px;
-        margin-left: calc(84% / 2);
-        background-color: #ECEFF1;
-        font-weight: 700;
-        letter-spacing: 2px;
-        cursor: default;
-    }
-}
-.dialog-close-button {
-    font-size: 12px;
+  .no-picture-text
+  {
+    font-weight: 700;
+    line-height: 40px;
+
+    position: absolute;
+
+    height: 40px;
+    margin-top: 150px;
+    margin-left: calc(84% / 2);
+    padding-right: 20px;
+    padding-left: 20px;
+
+    cursor: default;
     letter-spacing: 2px;
+
+    background-color: #eceff1;
+  }
+
+}
+.dialog-close-button
+{
+  font-size: 12px;
+
+  letter-spacing: 2px;
 }
