update photos page

--- a/assets/scss/photos/lg.scss
+++ b/assets/scss/photos/lg.scss
@@ -100,3 +100,14 @@
 
   color: #969696;
 }
+.dialog-subtitle
+{
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+.dialog-close-button
+{
+  font-size: 12px;
+  letter-spacing: 2px;
+}
