--- a/assets/scss/example-profile/index/xs.scss
+++ b/assets/scss/example-profile/index/xs.scss
@@ -25,7 +25,7 @@
   .text
   {
     font-size: 14px;
-    padding-left: 46px;
+    // padding-left: 46px;
     padding-right: 10px;
     letter-spacing: 1px;
   }
@@ -39,7 +39,7 @@
 
     .day-of-week-name
     {
-      margin-left: 46px;
+      // margin-left: 46px;
     }
   }
   .tags
