--- a/assets/scss/header/navigation-drawer.scss
+++ b/assets/scss/header/navigation-drawer.scss
@@ -24,6 +24,19 @@
 
   color: #000;
 }
+.close-menu-icon-example-profile
+{
+  position: relative;
+  top: 2px;
+  left: 240px;
+
+  margin-right: 20px;
+  margin-left: 20px;
+
+  cursor: default;
+
+  color: #000;
+}
 .selected-icon
 {
   color: #252bfc !important;
