--- a/assets/scss/layouts/default.scss
+++ b/assets/scss/layouts/default.scss
@@ -23,11 +23,12 @@ $scrollbar-thumb-color: #b3b3b3;
 }
 .v-menu__content
 {
-  border-top: 1px solid #e2e2e2;
-  border-right: 1px solid #e2e2e2;
-  border-bottom: 1px solid #e2e2e2;
-  border-left: 1px solid #e2e2e2;
-  box-shadow: none;
+  // border-top: 1px solid #e2e2e2;
+  // border-right: 1px solid #e2e2e2;
+  // border-bottom: 1px solid #e2e2e2;
+  // border-left: 1px solid #e2e2e2;
+  // box-shadow: none;
+  border-radius: 0px;
 }
 .v-menu__content::-webkit-scrollbar-track
 {
