--- a/assets/scss/profiles-search/profile-details/mobile/xs.scss
+++ b/assets/scss/profiles-search/profile-details/mobile/xs.scss
@@ -12,8 +12,8 @@
     }
     .profile-section
     {
-        position: absolute;
-        width: calc(100% - 0px);
+        // position: absolute;
+        // width: calc(100% - 0px);
     }
     .swipe-section
     {
