update results-list component - dialog for pofile image for xs breakpoint

--- a/assets/scss/profiles-search/container-results/results-list/xs.scss
+++ b/assets/scss/profiles-search/container-results/results-list/xs.scss
@@ -20,6 +20,10 @@
   {
     border-radius: 0;
   }
+  .card-profile-image
+  {
+    height: calc(100vh - 200px);
+  }
   .profile-image-not-available
   {
     border-radius: 0px;
