--- a/assets/scss/header/toolbar-search-header.scss
+++ b/assets/scss/header/toolbar-search-header.scss
@@ -77,3 +77,17 @@
     top: 3px;
   }
 }
+.mobile-search-icon
+{
+}
+@media only screen and (max-width: 600px)
+{
+  // .toolbar-search-header
+  // {
+  //   height: 54px;
+  // }
+  .toolbar-title
+  {
+    margin-left: 6px!important;
+  }
+}
