--- a/assets/scss/photos/xs.scss
+++ b/assets/scss/photos/xs.scss
@@ -4,4 +4,14 @@
   {
     width: 100%;
   }
+  .paging-button-section
+  {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .paging-button
+  {
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
 }
