update founder page for xs breakpoint

--- a/assets/scss/founder/founder.scss
+++ b/assets/scss/founder/founder.scss
@@ -20,3 +20,13 @@
   text-decoration: none;
   letter-spacing: 2px;
 }
+@media only screen and (max-width: 600px)
+{
+  .title-page
+  {
+    font-size: 32px;
+
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
