--- a/assets/scss/project/project.scss
+++ b/assets/scss/project/project.scss
@@ -22,10 +22,17 @@
 }
 @media only screen and (max-width: 600px)
 {
+  .title-page
+  {
+    font-size: 32px;
+
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   .description
   {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 16px;
+    padding-left: 14px;
+    padding-right: 14px;
+    font-size: 14px;
   }
 }
