--- a/assets/scss/photos/xs.scss
+++ b/assets/scss/photos/xs.scss
@@ -1,5 +1,12 @@
 @media only screen and (max-width: 600px)
 {
+  .title-page
+  {
+    font-size: 32px;
+
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   .full-size-photo
   {
     width: 100%;
