--- a/assets/scss/contact/contact.scss
+++ b/assets/scss/contact/contact.scss
@@ -16,9 +16,18 @@
 
   color: #111111;
 }
+.subtitle-page
+{
+  font-size: 24px;
+
+  text-align: center;
+  letter-spacing: 1px;
+
+  padding-bottom: 40px;
+}
 .section
 {
-  margin-bottom: 40px;
+  margin-bottom: 24px;
 }
 .contact-form-section
 {
@@ -26,11 +35,20 @@
 }
 @media only screen and (max-width: 600px)
 {
+  .contact-container
+  {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
   .title-page
   {
     font-size: 32px;
 
     padding-top: 60px;
     padding-bottom: 60px;
+  }
+  .contact-form-section
+  {
+    margin-bottom: 60px;
   }
 }
