--- a/assets/scss/example-profile/example-profile.scss
+++ b/assets/scss/example-profile/example-profile.scss
@@ -1,13 +1,19 @@
+.example-profile-container
+{
+  background-color:#ffffff;
+}
 .top-image-section
 {
   width: 100%;
   height: calc(100vw / 3.2 - 1px);
+  
   background-color: #d0d0d0;
 }
 .top-image
 {
   width: 100%;
   height: calc(100vw / 3.2 - 1px);
+
   background-position: center;
   background-size: cover;
 }
@@ -18,40 +24,49 @@
 }
 .wrapper
 {
-  text-align: left;
-  margin: 0 300px 0 0;
   display: inline-block;
+
+  margin: 0 300px 0 0;
+
+  text-align: left;
 }
 div.menu-section
 {
-  top: 0;
-  padding-top: 64px;
   position: sticky;
-  margin-right: 10px;
+  top: 0;
+
+  float: left;
+
   width: 300px;
   height: auto;
-  float: left;
+  margin-right: 10px;
+  padding-top: 64px;
 }
 .content-section
 {
+  float: right;
+
   width: 640px;
   padding-top: 60px;
-  float: right;
 }
 .router-link
 {
   text-decoration: none;
 }
+
 .router-link-button
 {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 44px;
+
   width: 100%;
   height: 44px;
-  line-height: 44px;
   padding-left: 10px;
+
   letter-spacing: 1px;
-  font-weight: 700;
+
   color: #1b2d39;
-  font-size: 14px;
   outline: none;
 
   &:hover
@@ -63,12 +78,15 @@ div.menu-section
   {
     position: relative;
     top: 3px;
+
     margin-right: 8px;
-    color: #000000;
+
+    color: #000;
   }
 }
 #alignment
 {
-  height: 100%;
   display: inline-block;
+
+  height: 100%;
 }
