--- a/assets/scss/home/cities/lg.scss
+++ b/assets/scss/home/cities/lg.scss
@@ -26,7 +26,7 @@
     padding-bottom: 4px;
     letter-spacing: 2px;
     cursor: default;
-    color: #9f9f9f;
+    color: #4d4d4d;
 
     &:hover
     {
