--- a/assets/scss/countries/countries.scss
+++ b/assets/scss/countries/countries.scss
@@ -65,7 +65,7 @@
   font-size: 16px;
   letter-spacing: 1px;
   text-decoration: none;
-  color: #989898;
+  color: #4d4d4d;
   cursor: default;
 
   &:hover
