update logo component, add svg logo

--- a/assets/scss/header/toolbar-header.scss
+++ b/assets/scss/header/toolbar-header.scss
@@ -4,6 +4,10 @@
 
   box-shadow: 1px 1px #f0f0f0;
 }
+.toolbar-title
+{
+  margin-left: 0px;
+}
 .business-logo-text
 {
   font-size: 14px;
@@ -13,7 +17,6 @@
   display: inline;
 
   height: 64px;
-  margin-left: 10px;
 
   letter-spacing: 1px;
 }
