--- a/assets/scss/header/toolbar-search-header.scss
+++ b/assets/scss/header/toolbar-search-header.scss
@@ -6,10 +6,14 @@
 
   box-shadow: 0 1px #f2f2f2 !important;
 }
+.toolbar-title
+{
+  margin-left: -6px!important;
+}
 .search-form
 {
   width: 68%;
-  margin-left: 121px;
+  margin-left: 85px;
 }
 .combobox-input
 {
